[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "honcho/_version.py"

[tool.ruff]
extend-exclude = [
    "doc/conf.py",
    "honcho/_version.py",
]
lint.select = ["E4", "E7", "E9", "F", "I", "N", "RUF"]
