[metadata]
name = honcho
version = attr: setuptools_scm.get_version
description = Honcho: a Python clone of Foreman. For managing Procfile-based applications.
url = https://github.com/nickstenning/honcho
author = Nick Stenning
author_email = nick@whiteink.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license_expression = MIT
license_files = LICENSE
classifiers =
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Environment :: Console
    Topic :: Software Development
    Topic :: Software Development :: Testing

keywords = sysadmin, process, procfile

[options]
python_requires = >= 3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    colorama; sys_platform=="win32"
    importlib_metadata; python_version < "3.8"

packages =
    honcho

[options.entry_points]
console_scripts =
    honcho = honcho.command:main

[options.extras_require]
doc =
    sphinx
export =
    jinja2>=3.1.2,<4

[check]
metadata = true
restructuredtext = true
strict = false

[check-manifest]
ignore =
    .gitattributes
    .gitignore
    .pre-commit-config.yaml

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    tests

max-line-length = 90
